1.0.2 tried to fix scrollbar

--- a/style.css
+++ b/style.css
@@ -77,7 +77,6 @@ body {
     align-items: baseline;
     text-align: center;
     justify-content: space-between;
-    position: sticky;
     background: var(--background);
     overflow: hidden;
     padding: 25px;
@@ -170,7 +169,7 @@ body {
 
     .navbar {
         padding:25px;
-        height:50px;
+        height: 50px;
     }
 
 
